--- a/index.html
+++ b/index.html
@@ -1,9 +1,34 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        
-    </head>
-    <body>
-        
-    </body>
+<head>
+<meta name="description" content="Anniversary 2 testing">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Happy anniversary</title>
+  <link href='https://fonts.googleapis.com/css?family=Permanent+Marker' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="assests/style.css" type="text/css" />
+</head>
+<body class="body">    
+  <div class="container">    
+    <div class="photo">
+    </div>
+    <div class="photo">
+      <img class="photo__img" src="/assests/images/birdwatching.jpg" alt="bird watching selfie"></img>
+      <div class="photo__label">Bird watching in Rye</div>
+    </div>
+    <div class="photo">
+    </div>
+    <div class="photo">
+    </div>
+  </div>
+  <div class="footer">
+    <div class="bow bow--swing">
+      <img class="bow__img" src="/assests/images/bow.svg"></img>  
+    </div>
+    <div class="photo photo--swing photo--pad">
+        <p>I love you</p>
+        <p>Happy anniversary xxx</p>
+    </div>
+  </div>
+</body>
 </html>
