--- a/index.html
+++ b/index.html
@@ -6,24 +6,46 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Happy anniversary</title>
   <link href='https://fonts.googleapis.com/css?family=Permanent+Marker' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="assests/style.css" type="text/css" />
+  <link rel="stylesheet" href="assets/style.css" type="text/css" />
 </head>
 <body class="body">    
   <div class="container">    
     <div class="photo">
+      <img class="photo__img" src="/assets/images/w768_2.jpg" alt="bird watching selfie"></img>
+      <div class="photo__label">Our first anniversary</div>
     </div>
     <div class="photo">
-      <img class="photo__img" src="/assests/images/birdwatching.jpg" alt="bird watching selfie"></img>
+      <img class="photo__img" src="/assets/images/IMAG0288-ANIMATION.gif" alt="the George in Rye"></img>
+      <div class="photo__label">The George in Rye</div>
+    </div>
+    <div class="photo">
+      <img class="photo__img" src="/assets/images/IMAG0317.jpg" alt="bird watching selfie"></img>
+      <div class="photo__label">Relaxing in Malta</div>
+    </div>
+    <div class="photo">
+      <img class="photo__img" src="/assets/images/IMG_20150515_123917.jpg" alt="bird watching selfie"></img>
+      <div class="photo__label">Wind swept in Vatican City</div>
+    </div>
+    <div class="photo">
+      <img class="photo__img" src="/assets/images/birdwatching.jpg" alt="bird watching selfie"></img>
       <div class="photo__label">Bird watching in Rye</div>
     </div>
     <div class="photo">
+      <img class="photo__img" src="/assets/images/w768.jpg" alt="graduation"></img>
+      <div class="photo__label">Incredibly proud!!!!!</div>
     </div>
     <div class="photo">
+      <img class="photo__img" src="/assets/images/w768_1.jpg" alt="bird watching selfie"></img>
+      <div class="photo__label">Christams turkey</div>
+    </div>
+    <div class="photo">
+      <img class="photo__img" src="/assets/images/IMG_20151225_114049.jpg" alt="Christmas in the Sanderson house"></img>
+      <div class="photo__label">Christmas in the Sanderson house</div>
     </div>
   </div>
   <div class="footer">
     <div class="bow bow--swing">
-      <img class="bow__img" src="/assests/images/bow.svg"></img>  
+      <img class="bow__img" src="/assets/images/bow.svg"></img>  
     </div>
     <div class="photo photo--swing photo--pad">
         <p>I love you</p>
